# RenderX

./: .gitmodules  CMakeLists.txt  README.md
RenderX/: CMakeLists.txt
RenderX/shaders/: compile.bat  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
RenderX/src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameInfo.h  GameObject.cpp  GameObject.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  SwapChain.cpp  SwapChain.h  Utils.h  Window.cpp  Window.h  main.cpp
RenderX/src/systems/: PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.h
Scripts/: WinBuild.bat
